--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"next-seo": "^5.15.0",
 		"prettier-plugin-tailwindcss": "^0.2.0",
 		"react": "^18.2.0",
+		"react-burger-menu": "^3.0.9",
 		"react-dom": "^18.2.0",
 		"react-hotkeys-hook": "^4.0.4",
 		"react-use": "^17.4.0",
