--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@next/bundle-analyzer": "^13.0.6",
+		"@next/font": "^13.4.2",
 		"@reach/rect": "^0.18.0",
 		"@svgr/webpack": "^6.5.1",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
